# osmsatlab

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  debug_plot.py  extract_pdf.py  pyproject.toml  reproduce_bug.py  verify_city_init.py  verify_cloud_filter.py  verify_cloud_mask.py  verify_mosaic.py  verify_refactor.py  visualize_modis.py
docs/: datasets.md  design.md  methodology.md  quickstart.md  report.md
examples/: 01_fetch_osm_services.py  02_load_population.py  03_accessibility_analysis.py  03_accessibility_and_coverage.py  04_per_capita_and_equity.py  05_make_maps.py  bogotá_res_accessibility.html  check_population.py  interactive_testing.ipynb  soacha.geojson
src/osmsatlab/: __init__.py  config.py  constants.py  core.py  exceptions.py  types.py
src/osmsatlab/accessibility/: euclidean.py  network.py
src/osmsatlab/io/: __init__.py  boundaries.py  cache.py  gg.ipynb  modis.py  osm.py  population.py  sentinel2.py
src/osmsatlab/metrics/: __init__.py  accessibility.py  correlation.py  coverage.py  equity.py  heat_exposure.py  per_capita.py  scoring.py  temperature.py
src/osmsatlab/preprocess/: geometry.py  normalize_osm.py  validation.py
src/osmsatlab/spatial/: distance.py  index.py  join.py  sampling.py
src/osmsatlab/vis/: __init__.py  animation.py
src/osmsatlab/viz/: __init__.py  aggregation.py  choropleth.py  example.py  plot.py  plots.py  units.py  workflows.py
tests/: test_accessibility_euclidean.py  test_core.py  test_coverage.py  test_equity.py  test_io_osm.py  test_io_population.py  test_metrics.py  test_normalize_osm.py  test_per_capita.py  test_viz.py  test_zonal_aggregation.py
