[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osmsatlab"
version = "0.0.1"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A package for OSM satellite lab analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your dependencies here
]

[project.urls]
"Homepage" = "https://github.com/yourusername/osmsatlab"
"Bug Tracker" = "https://github.com/yourusername/osmsatlab/issues"

[tool.setuptools.packages.find]
where = ["src"]
